omni/tests/goldens/types/unknown_type_23.err
tests/goldens/types/unknown_type_23.omni:1:13: error: unknown type "Mystery23"
     1 | let value23:Mystery23 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_23.omni:1:1: error: type mismatch: cannot assign int to Mystery23
     1 | let value23:Mystery23 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery23 or change the variable type to int
